Fix - changed alignment and colour of icons.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,5 +12,6 @@
 
 i {
     color: #fafafa;
-    margin: 2px;
+    margin-bottom: 5px;
+    
 }
